Rewrite to be a single project
Signed-off-by: Irmo van den Berge <irmo.vandenberge@ziggo.nl>